samples/_failures_safe/1761329719_8ba2f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f2ad7909.c: In function ‘tokenize’:
./samples/SAFE/__tmp_f2ad7909.c:177: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_f2ad7909.c:176:9: error: expected declaration or statement at end of input
  176 |         if
      |         ^~
./samples/SAFE/__tmp_f2ad7909.c:176:9: error: expected declaration or statement at end of input
